practicing event with exercises

--- a/Events/css/style.css
+++ b/Events/css/style.css
@@ -28,6 +28,10 @@ body {
   grid-template-columns: 1fr 120px minmax(300px, 800px) 1fr;
 }
 
+.ultra {
+  font-size: 4rem;
+}
+
 .azul {
   background: teal;
 }
