--- a/DOM-EFFECTS/modules/css/global.css
+++ b/DOM-EFFECTS/modules/css/global.css
@@ -24,6 +24,9 @@ ul {
 body {
   background: #faf6ed;
   color: #222222;
+}
+
+.grid-container {
   display: grid;
   grid-template-columns: 1fr 120px minmax(300px, 800px) 1fr;
 }
@@ -191,7 +194,7 @@ body {
 }
 
 @media (max-width: 700px) {
-  body {
+  .grid-container {
     grid-template-columns: 1fr;
   }
   .menu,
